testing/errors/symboltwice2.a
	*=$1000
label
	!src "alreadydefined.inc"
